<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ComA</string>
    <string name="applicationId">387068164745414</string>
    
    <string name="menu_home_icon">⌂</string>
    <string name="menu_routes_icon"></string>
    <string name="menu_history_icon"></string>
    <string name="menu_statistics_icon">◴</string>
    <string name="menu_settings_icon">⚙</string>
    
    <string name="begining_icon">⏮</string>
    <string name="ending_icon">⏭</string>
    
    <string name="menu_home">ComA</string>
    <string name="menu_routes">Routes</string>
    <string name="menu_history">History</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_settings">Settings</string>
    
    <string name="menuitem_search">Search</string>
    <string name="menuitem_current_position">Current Position</string>
    <string name="menuitem_done">Done</string>
    <string name="label_password">Password:</string>
    <string name="label_email">Email:</string>
    <string name="label_login_info">If you login to Facebook the application will be able to use your events.</string>
    <string name="button_login">Login</string>
    <string name="button_skip">Skip</string>
    <string name="desc_facebook_logo">Facebook logo.</string>
    
    <string name="label_accounts">Account</string>
    <string name="label_register_account">Register account</string>
    <string name="label_login_into_facebook">Login into Facebook</string>
    <string name="label_login_into_facebook2">Facebook account (logout)</string>
    <string name="label_locations">Locations</string>
    <string name="label_home_location">Home location</string>
    <string name="label_work_location">Work location</string>
    <string name="label_time">Time</string>
    <string name="label_sleep_interval">Sleep interval</string>
    <string name="label_developer_tools">Developer tools</string>
    <string name="label_erase_preferences">Erase preferences</string>
    
    <string name="label_time_spent">Time spent</string>
    <string name="label_means_of_transport">Means of transport</string>
    
    <string name="facebook_not_connected">Not connected.</string>
    <string name="facebook_connected">Connected as “%s”.</string>
    
    <string name="address_not_set">Address not set.</string>
    <string name="could_not_resolve_address">Could not resolve address.</string>
    
    <string name="map_icon">Map icon.</string>
    <string name="map_url" formatted="false">http://maps.googleapis.com/maps/api/staticmap?center=%.6f,%.6f&amp;zoom=13&amp;size=%dx%d&amp;maptype=roadmap&amp;markers=color:yellow%%7C%.6f,%.6f&amp;sensor=false</string>

    <string name="map_url2" formatted="false">http://maps.googleapis.com/maps/api/staticmap?size=%dx%d&amp;maptype=roadmap&amp;markers=color:green%%7Clabel:A%%7C%.6f,%.6f&amp;markers=color:red%%7Clabel:B%%7C%.6f,%.6f&amp;visible=%.6f,%.6f&amp;visible=%.6f,%.6f&amp;sensor=false</string>
    
    <string name="button_set">Set</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_up">▲</string>
    <string name="button_down">▼</string>
    
    <string name="route_selection_name">Route</string>
    <string name="label_add_new_route">Add new route</string>
    <string name="desc_route_image">Route map</string>
    <string name="desc_location_from">Travel from map.</string>
    <string name="desc_location_to">Travel to map.</string>
    
    <string name="label_route_arrival_time" formatted="false">Arrival time: %s</string>
    <string name="label_route_arrival_date" formatted="false">Arrival date: %s</string>
    <string name="label_route_repeating" formatted="false">Repeating: %s</string>
    
    <string name="tab_locations">Locations</string>
    <string name="tab_arrival">Arrival</string>
    <string name="tab_transport">Transport</string>
    <string name="label_location_from">From:</string>
    <string name="label_location_to">To:</string>
    <string name="label_arrival_time">Time:</string>
    <string name="checkbox_repeat">Repeat weekly</string>
    <string name="label_arrival_date">Date:</string>
    
    <string name="short_week_name_0">Mo</string>
    <string name="short_week_name_1">Tu</string>
    <string name="short_week_name_2">We</string>
    <string name="short_week_name_3">Th</string>
    <string name="short_week_name_4">Fr</string>
    <string name="short_week_name_5">Sa</string>
    <string name="short_week_name_6">Su</string>
    
    <string name="label_route">Route</string>
    <string name="label_edit">Edit</string>
    <string name="label_delete">Delete</string>
    
    <string name="desc_none"></string>
    
    <string name="label_computing_path">Computing path&#8230;</string>
    <string name="label_problems_computing_path">Problems computing path.</string>
    <string name="train_simulator_name">Simulator</string>
    <string name="menuitem_lock">Lock</string>
    <string name="menuitem_unlock">Unlock</string>
    
</resources>