<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/facebook_blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FacebookLoginActivity"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/desc_facebook_logo"
        android:src="@drawable/facebook_logo" />

    <TextView
        android:id="@+id/emailTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/passwordTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_password"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:ems="10"
        android:inputType="textPassword"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/loginInfoTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/label_login_info"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:background="?android:attr/dividerVertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp" >

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:onClick="onLoginClick"
            android:text="@string/button_login"
            android:textColor="@color/white" />
        
        <View
            android:id="@+id/ViewColorPickerHelper"
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"
            android:background="?android:attr/dividerVertical" />

        <Button
            android:id="@+id/skipBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:onClick="onSkipClick"
            android:text="@string/button_skip"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>