<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal" >    
    
	<LinearLayout
	    android:layout_width="0dp"
	    android:layout_weight="1"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
	    <Button
	        android:id="@+id/upHourBtn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/button_up"
	        android:textSize="@dimen/button_char_text_size"
	        android:background="?android:attr/selectableItemBackground" />
	
	    <EditText
	        android:id="@+id/valueHourEt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:ems="8"
	        android:gravity="center_vertical|center_horizontal"
	        android:inputType="numberDecimal" />
	
	    <Button
	        android:id="@+id/downHourBtn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/button_down"
	        android:textSize="@dimen/button_char_text_size"
	        android:background="?android:attr/selectableItemBackground" />
	    
	</LinearLayout>    
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <Button
            android:id="@+id/upMinBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_up"
            android:textSize="@dimen/button_char_text_size"
            android:background="?android:attr/selectableItemBackground" />
    
        <EditText
            android:id="@+id/valueMinEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="8"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="numberDecimal" />
    
        <Button
            android:id="@+id/downMinBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_down"
            android:textSize="@dimen/button_char_text_size"
            android:background="?android:attr/selectableItemBackground" />
        
    </LinearLayout>
    
</LinearLayout>    
    
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="?android:attr/dividerVertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp" >
    
        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/button_cancel" 
            android:background="?android:attr/selectableItemBackground"/>

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/dividerVertical" />

        <Button
            android:id="@+id/setBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/button_set" 
            android:background="?android:attr/selectableItemBackground"/>

    </LinearLayout>

</LinearLayout>