<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="UselessParent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/route_vertical_margin"
        android:layout_marginLeft="@dimen/route_horizontal_margin"
        android:layout_marginRight="@dimen/route_horizontal_margin"
        android:layout_marginTop="@dimen/route_vertical_margin"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/route_padding" >

        <ImageView
            android:id="@+id/routeMapIv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/route_horizontal_margin"
            android:layout_weight="1"
            android:contentDescription="@string/desc_route_image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/beginingIconTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:text="@string/begining_icon"
                    android:textColor="@color/start_color"
                    android:textIsSelectable="false"
                    android:gravity="bottom"
                    android:textSize="@dimen/icon_label_size" />

                <TextView
                    android:id="@+id/itemRouteFromTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_vertical"
                    android:textIsSelectable="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/endingIconTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:text="@string/ending_icon"
                    android:textColor="@color/end_color"
                    android:textIsSelectable="false"
                    android:gravity="bottom"
                    android:textSize="@dimen/icon_label_size" />

                <TextView
                    android:id="@+id/itemRouteToTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_vertical"
                    android:textIsSelectable="false" />
            </LinearLayout>

            <TextView
                android:id="@+id/itemRouteTimeTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textIsSelectable="false" />

            <TextView
                android:id="@+id/itemRouteExtraTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textIsSelectable="false" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>